improve the features extraction since that I need n frames x m features for my models

--- a/extrapolate the MFCC from audio file.ipynb
+++ b/extrapolate the MFCC from audio file.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8ffe411f",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "05b396d5",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        " 'Magaret_Tarcher']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "13b5e73f",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1083,7 @@
        " ...]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "11efd1e8",
    "metadata": {},
    "outputs": [
@@ -1215,29 +1215,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "cd956400",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tot frame: 101 tot features per frame: 39\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(39, 101)"
+       "(13, 101)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# The data is always a 2D array, shape (n_samples, n_features) \n",
     "mfcc_total_1_audio = np.concatenate((mfcc_features, delta_mfcc, delta2_mfcc))\n",
+    "mfcc_total_1_audio = mfcc_total_1_audio.transpose()\n",
+    "print(\"tot frame:\",mfcc_total_1_audio.shape[0], \"tot features per frame:\",mfcc_total_1_audio.shape[1])\n",
     "mfcc_total_1_audio.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "e06a2ae4",
    "metadata": {},
    "outputs": [
@@ -1253,10 +1263,10 @@
     {
      "data": {
       "text/plain": [
-       "(39, 151500)"
+       "(151500, 39)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,12 +1301,13 @@
     "    \n",
     "    Mandela_data = np.concatenate((Mandela_data, data_partial), axis=1)\n",
     "\n",
+    "Mandela_data = Mandela_data.transpose()\n",
     "Mandela_data.shape  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "d8236c01",
    "metadata": {},
    "outputs": [
@@ -1312,10 +1323,10 @@
     {
      "data": {
       "text/plain": [
-       "(39, 151500)"
+       "(151500, 39)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,12 +1361,13 @@
     "    \n",
     "    Netanyau_data = np.concatenate((Netanyau_data, data_partial), axis=1)\n",
     "\n",
+    "Netanyau_data = Netanyau_data.transpose()\n",
     "Netanyau_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "a1a7240e",
    "metadata": {},
    "outputs": [
@@ -1371,10 +1383,10 @@
     {
      "data": {
       "text/plain": [
-       "(39, 151500)"
+       "(151500, 39)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,12 +1421,13 @@
     "    \n",
     "    Tarcher_data = np.concatenate((Tarcher_data, data_partial), axis=1)\n",
     "\n",
+    "Tarcher_data = Tarcher_data.transpose()\n",
     "Tarcher_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "1cfc0110",
    "metadata": {},
    "outputs": [
@@ -1430,10 +1443,10 @@
     {
      "data": {
       "text/plain": [
-       "(39, 151500)"
+       "(151500, 39)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,12 +1481,13 @@
     "    \n",
     "    Stoltenberg_data = np.concatenate((Stoltenberg_data, data_partial), axis=1)\n",
     "\n",
+    "Stoltenberg_data = Stoltenberg_data.transpose()\n",
     "Stoltenberg_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "6222e271",
    "metadata": {},
    "outputs": [
@@ -1481,10 +1495,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(39, 151501)\n",
-      "(78, 151501)\n",
-      "(117, 151501)\n",
-      "final: (156, 151501)\n"
+      "(151500, 39)\n",
+      "(303000, 39)\n",
+      "(454500, 39)\n",
+      "final: (606000, 39)\n"
      ]
     }
    ],
@@ -1495,23 +1509,18 @@
     "# Netanyau = 1\n",
     "# Tarcher = 2\n",
     "# Stoltenberg = 3\n",
-    "flag_Mandela = np.zeros((39,1))\n",
-    "audio_data = np.concatenate((flag_Mandela ,Mandela_data), axis=1)\n",
+    "\n",
+    "audio_data = Mandela_data\n",
     "print(audio_data.shape)\n",
     "\n",
-    "flag_Netanyau = np.ones((39,1))\n",
-    "partial_data = np.concatenate((flag_Netanyau ,Netanyau_data), axis=1)\n",
-    "audio_data = np.concatenate((audio_data,partial_data))\n",
+    "audio_data = np.concatenate((audio_data,Netanyau_data))\n",
     "print(audio_data.shape)\n",
     "\n",
-    "flag_Tarcher = np.ones((39,1))*2\n",
-    "partial_data = np.concatenate((flag_Tarcher ,Tarcher_data), axis=1)\n",
-    "audio_data = np.concatenate((audio_data,partial_data))\n",
+    "audio_data = np.concatenate((audio_data,Tarcher_data))\n",
     "print(audio_data.shape)\n",
     "\n",
-    "flag_Stoltenberg = np.ones((39,1))*3\n",
-    "partial_data = np.concatenate((flag_Stoltenberg ,Stoltenberg_data), axis=1)\n",
-    "audio_data = np.concatenate((audio_data,partial_data))\n",
+    "\n",
+    "audio_data = np.concatenate((audio_data,Stoltenberg_data))\n",
     "print(\"final:\",audio_data.shape)\n",
     "\n",
     "np.save('audio_data_4_speeches.npy', audio_data)\n"
